--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/codex-team/codex.smm#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "socks5-https-client": "^1.2.1"
   }
 }
