--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/codex-team/codex.smm#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "eslint": "^6.1.0",
+    "eslint-config-codex": "codex-team/eslint-config",
     "socks5-https-client": "^1.2.1"
   }
 }
