--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
     "eslint": "^6.1.0",
     "eslint-config-codex": "codex-team/eslint-config",
     "socks5-https-client": "^1.2.1"
