remove notifier link from sample

--- a/.env.sample
+++ b/.env.sample
@@ -11,4 +11,4 @@ SOCKS_HOST=50.62.59.61
 SOCKS_PORT=62705
 
 # CodexBot notifier link. See https://github.com/codex-bot/notify
-NOTIFY_URL=https://notify.bot.codex.so/u/O7BK8PA6
+NOTIFY_URL=
