--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "SMM assistant. Reminds you to write something to you followers.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codex-team/codex.smm.git"
@@ -20,8 +17,10 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-codex": "codex-team/eslint-config",
     "socks5-https-client": "^1.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-codex": "codex-team/eslint-config"
   }
 }
